--- a/src/app/modules/career-succession/new-competency/new-competency.component.html
+++ b/src/app/modules/career-succession/new-competency/new-competency.component.html
@@ -56,7 +56,9 @@
                 <div class="form-group row ">
                   <label for="Descripion" class="col-sm-3 col-form-label mylabel">Descripion</label>
                   <div class="col-sm-8 col-md- 8 col-lg-8">
-                    <ngx-wysisyg-input style="padding-left: -10px;"  [(value)]="myCompetency.description" ></ngx-wysisyg-input>                  </div>
+                    <!-- <ngx-wysisyg-input style="padding-left: -10px;"  [(value)]="myCompetency.description" ></ngx-wysisyg-input>                  </div> -->
+                    <textarea name="description" #description="ngModel" [(ngModel)]="myCompetency.description" cols="30" rows="10"></textarea>
+                  </div>
                 </div>
 
                 <div class="form-group row ">
@@ -186,7 +188,7 @@
                   <div class="col-sm-3"></div>
                   <div class="col-sm-8">
                     <span class="cbadge"  *ngFor="let requirement of allCompetencyRequirements" style="margin: 5px;">{{ requirement.requirementCategory }} &nbsp;
-                      <i class="fa fa-times" style="cursor: pointer;color: red;"></i></span>
+                      <i class="fa fa-times" (click)="removeRequirement()" style="cursor: pointer;color: red;"></i></span>
                   </div>
                 </div>
 
