--- a/src/app/modules/self-service/dashboard/dashboard.component.html
+++ b/src/app/modules/self-service/dashboard/dashboard.component.html
@@ -7,13 +7,13 @@
             <div class="col-md-8" style="display: flex; flex-direction: column;">
 
                 <div class="card" style="margin-right: 2px;">
-                    <div class="row mr-2">
+                    <div class="row mr-2" *ngFor="let details of contract">
                         <div class="col-md-4">
                             <img src="assets/images/nick.png" width="60%" style="background-size: cover;
                             margin-top: 20px; margin-left: 50px;" class="rounded-circle mb-1" alt="Cinque Terre">
                             <br>
-                            <span class="d-flex flex-row pl-2" style="font-size: x-small; margin-left: 34px;">software
-                                developer</span>
+                            <span class="d-flex flex-row pl-2"
+                                style="font-size: x-small; margin-left: 34px;">{{details.jobName}}</span>
                         </div>
 
                         <div class="col-md-4">
@@ -23,7 +23,7 @@
                                 </div>
                                 <div class="ml-2">
                                     <h6 style="font-size: xx-small; font-weight: lighter;">Department</h6>
-                                    <h6 style="font-size: x-small;">Product development</h6>
+                                    <h6 style="font-size: x-small;">{{details.departmentName}}</h6>
                                 </div>
 
 
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="ml-2">
                                     <h6 style="font-size: xx-small; font-weight: lighter;">Email</h6>
-                                    <h6 style="font-size: x-small;">sherif@smartace.ng</h6>
+                                    <h6 style="font-size: x-small;">{{employeeDetails.workEmail}}</h6>
                                 </div>
                             </div>
                             <div class="d-flex mt-4" style="margin-left: 15px; padding-bottom: 10px;">
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="ml-2">
                                     <h6 style="font-size: xx-small; font-weight: lighter;">Date of joining</h6>
-                                    <h6 style="font-size: x-small;">15th january,2021</h6>
+                                    <h6 style="font-size: x-small;">{{details.dateOfAppointment}}</h6>
                                 </div>
                             </div>
 
@@ -56,7 +56,7 @@
                                 </div>
                                 <div class="ml-2">
                                     <h6 style="font-size: xx-small; font-weight: lighter; color: blue;">staff id</h6>
-                                    <h6 style="font-size: x-small;">01345</h6>
+                                    <h6 style="font-size: x-small;">{{employeeDetails.staffNo}}</h6>
                                 </div>
 
 
@@ -67,8 +67,9 @@
                                 </div>
                                 <div class="ml-2">
                                     <h6 style="font-size: xx-small; font-weight: lighter;">Phone Number</h6>
-                                    <h6 style="font-size: x-small;">080891434128</h6>
+                                    <h6 style="font-size: x-small;">{{employeeDetails.workMobile}}</h6>
                                 </div>
+
                             </div>
                             <div class="d-flex mt-4">
                                 <div class="mt-2">
@@ -76,7 +77,7 @@
                                 </div>
                                 <div class="ml-2">
                                     <h6 style="font-size: xx-small; font-weight: lighter;">Office Location</h6>
-                                    <h6 style="font-size: x-small;">Marina, Lekki, Lagos</h6>
+                                    <h6 style="font-size: x-small;">{{employeeDetails.locationName}}</h6>
                                 </div>
                             </div>
 
@@ -172,10 +173,10 @@
                         </div> -->
 
                         <div class="zee">
-                            <div class="card-body" *ngFor="let i of [0,1,2,3,4,5,6,7,8]">
-                                <h4 class="card-title" style="font-size: small;">Workshop</h4>
-                                <p class="card-text" style="color: #F2994A;">Managing employeed</p>
-                                <p class="card-text">11am - 12pm</p>
+                            <div class="card-body" *ngFor="let eve of AllEvents">
+                                <h4 class="card-title" style="font-size: small;">{{eve.eventName}}</h4>
+                                <p class="card-text" style="color: #F2994A;">{{eve.description}}</p>
+                                <p class="card-text">{{eve.startDate | date:'medium'}}- {{eve.endDate | date:'medium'}}</p>
 
 
                             </div>
@@ -275,7 +276,7 @@
 
                         </div>
                     </div>
-                    <div class="card" >
+                    <div class="card">
                         <div class="card-body" style="display: flex; flex-direction: row; ">
                             <div>
                                 <img src="assets/icons/Reports.jpg" alt=""
@@ -385,16 +386,16 @@
 
             </div>
             <div class="col-md-6 card">
-                <div class="row" style="display: flex;">
+                <div class="row" style="display: flex;" >
                     <div class="" style="flex:auto">
                         <div class="card-body">
                             <h4 class="card-title" style="font-size: small;">My Request</h4>
 
-                            <div class="d-flex mt-3" *ngFor="let i of [0,1,2,3,4,5]">
+                            <div class="d-flex mt-3" *ngFor="let request of Request">
                                 <div class="ml-2" style="margin-top: 20px;">
-                                    <h6 style="font-size: small; font-weight: light;">Employee information request</h6>
-                                    <p class="card-text" style="font-size: smaller;" style="margin-top: 10px;">Tosin
-                                        Lasis</p>
+                                    <h6 style="font-size: small; font-weight: light;">{{request.title}}</h6>
+                                    <p class="card-text" style="font-size: smaller;" style="margin-top: 10px;">
+                                        >{{request.description}}</p>
                                 </div>
                             </div>
 
@@ -406,8 +407,9 @@
                         <div class="card-body">
 
                             <a href="#" class="card-link">view all</a>
-                            <div class="ml-2" style="margin-top: 50px;" *ngFor="let i of [0,1,2,3,4,5,6]">
-                                <h6 style="font-size: small; font-weight: lighter;" class="time">3 hours ago..</h6>
+                    <div class="" style="flex:auto">
+                            <div class="ml-2" style="margin-top: 50px;" *ngFor="let req of Request">
+                                <h6 style="font-size: small; font-weight: lighter;" class="time">{{req.request_date | date:'medium'}}</h6>
 
                             </div>
 
