--- a/src/app/components/custom-form/custom-form.component.html
+++ b/src/app/components/custom-form/custom-form.component.html
@@ -17,7 +17,7 @@
                 <ngx-multi-select *ngIf="field.type===FIELD_TYPES.select" [(value)]="tempData[field.name]" (valueChange)="selectChange(field, $event)" [choice_name]="field.choice_name"
                     [singleSelection]="field.singleSelection"></ngx-multi-select>
                 <div *ngIf="errors[field.name]">
-                    <div *ngFor="let error of errors[field.name]">
+                    <div *ngFor="let error of errors[field.name]" class="error">
                         {{error}}
                     </div>
                 </div>
