--- a/src/app/modules/expense/expense-request/expense-request.component.html
+++ b/src/app/modules/expense/expense-request/expense-request.component.html
@@ -43,7 +43,7 @@
       <div class="form-group">
         <label>Employee</label>
         <div>
-          <ngx-employee-master-search></ngx-employee-master-search>
+          <ngx-employee-master-search [(value)]="editingData.loggedForEmployeeId"></ngx-employee-master-search>
         </div>
       </div>
 
