--- a/src/app/modules/module-settings/pages/position-list/position-list.component.html
+++ b/src/app/modules/module-settings/pages/position-list/position-list.component.html
@@ -11,4 +11,8 @@
   [tableColumns]="tableColumns"
   [loadingSave]="loadingSave"
   [formTitle]="formTitle"
+  [errors]="errors"
 ></ngx-page>
+ddd
+{{errors|json}}
+ccc
