--- a/src/app/modules/module-settings/pages/request/request.component.html
+++ b/src/app/modules/module-settings/pages/request/request.component.html
@@ -26,7 +26,7 @@ pageName="Request"
 ></ngx-tablecomponent>
 </div>
 <ngx-side-modal [(show)]="showModal" (closed)="clearEditingData()">
-<div modal-header>Add New Department</div>
+<div modal-header>Add New Request Type</div>
 <div modal-body>
   <div class="my-form">
     <div class="form-group">
